syntax = "proto3";

option go_package = "github.com/tengla/nsr-parser/trainroute/protos/trainroute";

import "google/protobuf/timestamp.proto";

service OperatingTrainRouteService {
  rpc FullState (Empty) returns (OtrIdList) {}
  rpc GetItems (OtrIdList) returns (OperatingTrainRouteList) {}
}

message Empty {}

message OtrId {
  string train_id = 1;
}

message OtrIdList {
  repeated OtrId train_ids = 1;
}

message OperatingTrainRoute {
  string train_id = 1;
  google.protobuf.Timestamp train_date = 2;
}

message OperatingTrainRouteList {
  repeated OperatingTrainRoute routes = 1;
}
